Dave Dev/src/objects/Workbook__c.object
<CustomObject>
    <description>Saves a jQuery spreadsheet</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workbooks</relationshipLabel>
        <relationshipName>Workbooks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <label>Quote text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WorkbookURL__c</fullName>
        <label>WorkbookURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Worksheets__c</fullName>
        <label>Worksheets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Workbook</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Worksheets__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workbooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>